2004-09-13  Shaun McCance  <shaunm@gnome.org>

	* docs/C/gweather-C.omf:
	* docs/C/gweather.xml:
	- Updates for 2.8 from Angela Boyle

2004-08-24  Davyd Madeley  <davyd@madeley.id.au>

	* weather.c: Fix a TRANSLATOR comment incorrectly indicating "m/s" was
	miles per hour. Closes #150892.

2004-08-22  Davyd Madeley  <davyd@madeley.id.au>

	* weather.c:
	* Locations.xml.in: Fix forecasting information for United Kingdom.
	Closes #140677. Patch by Alan Cox <alan@redhat.com>. "No translatable
	strings were harmed in the making of this patch."

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Remove reference to screen-exec.
	* gweather-applet.c: (help_cb), (applet_destroy),
	(gweather_applet_create): Use gnome_help_* Also
	s/gtk_signal_connect/g_signal_connect/
	* gweather-pref.c: (help_cb): Same.

2004-08-15  Davyd Madeley  <davyd@madeley.id.au>

	* GNOME_GWeatherApplet.xml:
	* gweather-applet.c:
	* gweather-dialog.c: Change "Forecast" to "Details". Fixes #133871.

	* gweather-dialog.c: Change "Humidity" to "Relative Humidity". Fixes
	#147878.

2004-08-14  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xmlin: Add Ulaanbaatar, remove extra occurance of Penang,
	fix spelling of Sepang, change "Atlantic" to "Atlantic Ocean" to fix
	translation problem.

2004-08-14  Frank Solensky  <frank@solensky.org>

	reviewed by: Davyd Madeley <davyd@madeley.id.au>

	* Locations.xml.in: Add locations for Ukraine and Poland; fix typo on
	Gloucestershire, UK

	Fixes bugs #106451, #142677, #149123

2004-08-09  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-pref.c: Change centigrade to celsius. Closes bug #149541.
	* docs/C/gweather.xml: Change centigrade to celsius to reflect update
	in UI. Also add kPa to the list of pressures.

2004-08-08  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-pref.c:
	* gweather.h:
	* gweather.c: Add kPa to the list of pressure preferences. Closes
	#149612. Patch by Ryan Lortie <desrt@desrt.ca>.
